2012-10-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_events.php
	 operation/events/events_validate.php
	 operation/events/events.php: Fixed bad performance error validating
	 events from this view.
	 
2012-10-07  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Deleted index on utimestamp for tevento. This
	will produce a performance penalty for no reason.

2012-10-04  Hirofumi Kosaka  <kosaka@rworks.jp>

	* general/login_help_dialog.php: Fixed obsolete URL for
	documentation, on "Welcome to Pandora FMS" dialog.

2012-10-04  Sancho Lerena <slerena@artica.es>

        * include/functions_reporting.php: Guess what... AGAIN the
        tactical problem. Now it's fixed forever (cross	my fingers)

2012-10-04  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting.php: Fixed AGAIN the prooblem
	with tactical view, users with several groups or ALL group
	doesnt work fine.

2012-10-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Added new screen to eACL patch

2012-10-02  Sergio Martin <sergio.martin@artica.es>

	* include/languages/en_GB.po
	include/languages/en_GB.mo: Fixed a translation for
	"Set in process" in britanic english

2012-10-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed an error
	rounding last data on new graph statistics.

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Chaged to 6 default
	value for font_size. There was a problem and before
	the fix above || the id 7 was stored a 6 in db.
	              \/

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/setup/setup_visuals.php: Fixed an error
	creating array for font_size combo, the array id
	was created with 1 nomber less size 3 => id 2,
	size 1 => id 0. It causes wrong size stored in db.
	Now id equal to size.

2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed the calculus