@@ -1,5 +1,10 @@
 2012-10-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_events.php: Improvement performance in 
+	validation process (Check this for 5.0v).
+
+2012-10-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* include/functions_events.php
 	 operation/events/events_validate.php
 	 operation/events/events.php: Fixed bad performance error validating
